files = [
    #'alloc.hpp',
    'pmt.hpp',
    'rva_variant.hpp',
    #'gsl-lite.hpp',
    #'map.hpp',
    #'null.hpp',
    #'scalar.hpp',
    #'string.hpp',
    #'tag.hpp',
    #'type_helpers.hpp',
    'version.hpp',
    #'vector.hpp',
    #'wrap.hpp',
    'base64/base64.h'
]

install_headers(files, subdir : 'pmtv')
